# AdrianPack

./: .gitignore  CODE_OF_CONDUCT.md  README.md  setup.cfg  setup.py
AdrianPack/: Aplot.py  Extra.py  FilePlottr.py  Fileread.py  Helper.py  ODE.py  Plottr.py  csvread.py  fileread.py
Examples/Aplot/: air_res_plot.py  grid_plot.py  label_formatter.py  plot_from_file.py  simple_fit.py  simple_plot.py
Examples/Aplot/Data/: TextData.txt  sample_data_lib.py
Examples/Aplot/Data/SampleData/: Para_1,15_Ez.csv  Para_1,15_Hz.csv  Para_1,3_Ez.csv  Para_1,3_Hz.csv  Para_1,45_Ez.csv  Para_1,45_Hz.csv  Para_1,6_Ez.csv  Para_1,6_Hz.csv  Para_1,75_Ez.csv  Para_1,75_Hz.csv  Para_1,9_Ez.csv  Para_1,9_Hz.csv  Para_2_Ez.csv  Para_2_Hz.csv  Para_3_Ez.csv  Para_3_Hz.csv  Para_4_Ez.csv  Para_4_Hz.csv
Examples/Aplot/Data/WaterCup/: dataf1.txt  dataf2.txt  dataf3.txt
Examples/Aplot/Plots/: air_res_plot.py
Examples/Extra/: TextData.txt  examples.py
Examples/csvread/: example_txtread.py
Examples/csvread/Data/: CsvData.csv  ExcelData.xlsx
LICENSE/: MIT License.txt
Tests/: Extra_test.py  Helper_test.py
