[metadata]
name = AdrianPack
version = 0.0.4.0.5
license=MIT
author = Adrian van Eik
author_email = vaneikadrian@gmail.com
description = A package used for applications within the major Engineering
                physics at the Hague University of Applied Sciences
long_description = file: README.md
long_description_content_type = text/markdown
[options]
packages_dir =
    AdrianPack
packages = find:
install_requires=
    numpy
    pandas
    matplotlib
    scipy
tests_require=pytest
zip_safe = False
[options.packages.find]
where = AdrianPack